--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Global ignores
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.log
+*.env
+*.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Top-level node_modules
+/node_modules
+
+# Nested app
+synthetic-react-app/node_modules
+synthetic-react-app/build
+synthetic-react-app/.env
+synthetic-react-app/.DS_Store
