--- a/synthetic-react-app/package.json
+++ b/synthetic-react-app/package.json
@@ -14,6 +14,8 @@
     "antd": "^5.26.0",
     "ejs": "^3.1.10",
     "fs-extra": "^11.3.0",
+    "lighthouse": "^12.6.1",
+    "puppeteer": "^24.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
