--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ synthetic-react-app/node_modules
 synthetic-react-app/build
 synthetic-react-app/.env
 synthetic-react-app/.DS_Store
-synthetic-react-app/src/pages/test-data
+**/pages/test-data/
 ml/models
 ml/venv
